--- a/main.css
+++ b/main.css
@@ -295,6 +295,15 @@ li{
 	margin-right: auto;
 }
 
+.mom{
+	font-size: 12px;
+
+	color: #C0C0C0;
+
+	font-style: italic;
+	margin-left: 22%;
+}
+
 footer{
 	clear: both;
 }
