--- a/main.css
+++ b/main.css
@@ -83,13 +83,15 @@ span {
 }
 
 .home {
+	text-align: center;
+	position: relative;
+	clear: both;
+	background: url('https://dl.dropboxusercontent.com/u/263968982/cloud_gate_chicago_illinois_united_states-wallpaper-1440x900.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+	min-height: 700px;
 
-	min-height: 660px;
-
-}
-
-.information {
-	background-color: white;
 }
 
 .box-text{
@@ -112,17 +114,11 @@ span {
 
 .get-to-know{
 	margin-top: 10%;
-
-	width: 500px;
-
-	text-align: center;
 }
 
 .title {
 	font-size: 34px;
 	color: white;
-
-	text-align: center;
 
 	padding-top: 20%;
 	width: 500px;
@@ -141,6 +137,10 @@ a{
 
 a:hover {
 	color: #FFCC33;
+}
+
+.information {
+	background-color: white;
 }
 
 .contact, .designs, .about {
