--- a/main.css
+++ b/main.css
@@ -30,10 +30,6 @@ footer, header, hgroup, menu, nav, section {
 
 body{
 	min-width: 750px;
-	background: url('https://dl.dropboxusercontent.com/u/263968982/cloud_gate_chicago_illinois_united_states-wallpaper-1440x900.jpg');
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-attachment: fixed;
 }
 
 .header {
@@ -91,7 +87,7 @@ span {
 	background-size: cover;
 	background-attachment: fixed;
 	min-height: 700px;
-
+	max-height: 1250px;
 }
 
 .box-text{
@@ -293,7 +289,7 @@ li{
 	padding-right: 5%;
 }
 	
-.portfolio-1, .portfolio-2, .portfolio-3, .portfolio-4, .example {
+.portfolio-1, .portfolio-2, .portfolio-3, .portfolio-4, .portfolio-5, .example {
 	margin-left: auto;
 	margin-right: auto;
 
@@ -333,6 +329,11 @@ li{
 
 .portfolio-4{
 	background: url('https://dl.dropboxusercontent.com/u/263968982/rsz_screenshot_2014-09-15_184919%20(1).png');
+	background-repeat: no-repeat;
+}
+
+.portfolio-5{
+	background: url('https://dl.dropboxusercontent.com/u/263968982/rsz_screenshot_2014-09-17_191010_1%20(1).png');
 	background-repeat: no-repeat;
 }
 
