--- a/main.css
+++ b/main.css
@@ -28,6 +28,16 @@ footer, header, hgroup, menu, nav, section {
 *{
 }
 
+html{
+		background: url('https://dl.dropboxusercontent.com/u/263968982/cloud_gate_chicago_illinois_united_states-wallpaper-1440x900.jpg');
+	background-repeat: no-repeat;
+	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+	background-size: cover;
+	background-attachment: fixed;
+}
+
 body{
 	min-width: 750px;
 }
@@ -82,12 +92,7 @@ span {
 	text-align: center;
 	position: relative;
 	clear: both;
-	background: url('https://dl.dropboxusercontent.com/u/263968982/cloud_gate_chicago_illinois_united_states-wallpaper-1440x900.jpg');
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-attachment: fixed;
 	min-height: 700px;
-	max-height: 1250px;
 }
 
 .box-text{
