--- a/main.css
+++ b/main.css
@@ -85,7 +85,7 @@ span {
 	text-align: center;
 	position: relative;
 	clear: both;
-	min-height: 700px;
+	height: 100vh;
 
 	background: url('https://dl.dropboxusercontent.com/u/263968982/cloud_gate_chicago_illinois_united_states-wallpaper-1440x900.jpg');
 	background-repeat: no-repeat;
