--- a/main.css
+++ b/main.css
@@ -29,6 +29,13 @@ footer, header, hgroup, menu, nav, section {
 }
 
 html{
+	background: url('https://dl.dropboxusercontent.com/u/263968982/cloud_gate_chicago_illinois_united_states-wallpaper-1440x900.jpg');
+	background-repeat: no-repeat;
+	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+	background-size: cover;
+	background-attachment: fixed;
 }
 
 body{
@@ -85,7 +92,7 @@ span {
 	text-align: center;
 	position: relative;
 	clear: both;
-	height: 100vh;
+	min-height: 660px;
 
 	background: url('https://dl.dropboxusercontent.com/u/263968982/cloud_gate_chicago_illinois_united_states-wallpaper-1440x900.jpg');
 	background-repeat: no-repeat;
