--- a/main.css
+++ b/main.css
@@ -36,6 +36,8 @@ html{
   	-o-background-size: cover;
 	background-size: cover;
 	background-attachment: fixed;
+
+	background-repeat: no-repeat;
 }
 
 body{
