--- a/main.css
+++ b/main.css
@@ -26,6 +26,9 @@ footer, header, hgroup, menu, nav, section {
 }
 
 *{
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 html{
