--- a/main.css
+++ b/main.css
@@ -36,7 +36,7 @@ html{
 }
 
 body{
-	min-width:750px;
+	min-width: 1250px;
 }
 
 .header {
@@ -262,6 +262,7 @@ hr {
 
 li{
 	display: inline-block;
+	margin: auto;
 }
 
 .test {
